Revision history for Perl extension Apache2::Filter::CSS::LESS.

CURRENT
    - fixed: docs had wrong default content type.

0.20  Wed Nov 18 2009
    - rename to Apache2::Filter::CSS::LESS (was Apache2::Filter::CSS::LESSp).
    - add test for content type
    - add support for setting the content type via LessContentType

0.10  Tue Nov 17 2009
    - initial version