@@ -2,6 +2,8 @@ Revision history for Perl extension Apache2::Filter::CSS::LESS.
 
 CURRENT
     - fixed: docs had wrong default content type.
+    - check if Apache::Test is installed, skipping tests that require it if
+      necessary.
 
 0.20  Wed Nov 18 2009
     - rename to Apache2::Filter::CSS::LESS (was Apache2::Filter::CSS::LESSp).
